Fix z-index

--- a/res/css/structures/_RightPanel.scss
+++ b/res/css/structures/_RightPanel.scss
@@ -96,6 +96,7 @@ limitations under the License.
     flex: 0 0 60px;
     bottom: 8px;
     position: absolute;
+    z-index: 2;
 }
 
 .mx_RightPanel_footer .mx_RightPanel_invite {
